--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transporte de Materiales v38.0</title>
+    <title>Transporte de Materiales v37.0</title>
     <style>
         body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; margin: 0; background-color: #f7f9fc; color: #333; }
         .main-container { max-width: 1200px; margin: 20px auto; padding: 20px; }
@@ -36,7 +36,6 @@
         th { background-color: #f2f7ff; }
         tfoot td { font-weight: bold; background-color: #f2f7ff; }
         .grid-container-5 { display: grid; gap: 30px; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); }
-        .summary-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; }
         .form-buttons { display: flex; gap: 10px; }
         .filter-form { display: flex; gap: 15px; align-items: center; justify-content: center; flex-wrap: wrap; }
         .filter-form label { font-weight: bold; }
@@ -82,58 +81,11 @@
         <button class="tab-button" data-tab="tab-summary">Reportes</button>
     </div>
 
-    <div id="tab-registro" class="tab-content active">
-        <div class="card">
-            <h2 id="formViajeTitulo">🚚 Nuevo Registro de Viaje</h2>
-            <form id="transporteForm"><input type="hidden" id="indiceEdicion"><select id="selectNombres" required><option value="">1. Seleccionar Chofer</option></select><select id="selectPlaca" required disabled><option value="">2. Seleccionar Placa</option></select><select id="selectMaterial" required><option value="">3. Seleccionar Material</option></select><input type="number" id="volumen" placeholder="Volumen (se autocompleta)" step="0.01" readonly required><input type="date" id="fecha" required><select id="selectCantera" required><option value="">Seleccionar Cantera</option></select><select id="selectProyecto" required><option value="">Seleccionar Proyecto</option></select><input type="number" id="numViajes" placeholder="# de Viajes" value="1" min="1" required><div class="form-buttons"><button type="submit" id="btnSubmitViaje" class="btn-primary" style="flex-grow: 1;">Agregar Registro</button><button type="button" id="btnCancelarEdicion" class="btn-secondary" style="flex-grow: 1;">Cancelar</button></div></form>
-        </div>
-    </div>
+    <div id="tab-registro" class="tab-content active"></div>
+    <div id="tab-admin" class="tab-content"></div>
+    <div id="tab-summary" class="tab-content"></div>
+    <div id="signature-section"></div>
 
-    <div id="tab-admin" class="tab-content">
-        <div class="grid-container-5">
-            <div class="card"><h2>👤 Nombres de Choferes</h2><form id="nombreChoferForm"><input type="hidden" class="edit-id"><input type="text" id="nuevoNombreChofer" placeholder="Nombre y Apellido" required><button type="submit" class="btn-primary">Agregar</button></form><ul id="nombresChoferesLista"></ul></div>
-            <div class="card"><h2>🚛 Asignar Vehículo</h2><form id="choferVehiculoForm"><input type="hidden" class="edit-id"><select id="selectNombreAdmin" required><option value="">Seleccionar Chofer</option></select><input type="text" id="nuevaPlaca" placeholder="Placa" required><input type="number" id="nuevoVolumen" placeholder="Volumen (m³)" step="0.01" required><button type="submit" class="btn-primary">Asignar</button></form><ul id="choferesVehiculosLista"></ul></div>
-            <div class="card"><h2>💎 Materiales</h2><form id="materialForm"><input type="hidden" class="edit-id"><input type="text" id="nuevoMaterial" placeholder="Nombre" required><button type="submit" class="btn-primary">Agregar</button></form><ul id="materialesLista"></ul></div>
-            <div class="card"><h2>📍 Canteras</h2><form id="canteraForm"><input type="hidden" class="edit-id"><input type="text" id="nuevaCantera" placeholder="Nombre" required><button type="submit" class="btn-primary">Agregar</button></form><ul id="canterasLista"></ul></div>
-            <div class="card"><h2>🏁 Proyectos</h2><form id="proyectoForm"><input type="hidden" class="edit-id"><input type="text" id="nuevoProyecto" placeholder="Nombre" required><button type="submit" class="btn-primary">Agregar</button></form><ul id="proyectosLista"></ul></div>
-        </div>
-    </div>
-
-    <div id="tab-summary" class="tab-content">
-        <div class="print-only">TRANSPORTE DE MATERIALES PETREOS</div>
-        <div class="card">
-            <h2>🔎 Filtrar e Imprimir</h2>
-            <div class="filter-form">
-                <label for="fechaInicio">Desde:</label><input type="date" id="fechaInicio">
-                <label for="fechaFin">Hasta:</label><input type="date" id="fechaFin">
-                <label for="filtroMaterial">Material:</label>
-                <select id="filtroMaterial"><option value="">-- Todos --</option></select>
-                <label for="filtroProyecto">Proyecto:</label>
-                <select id="filtroProyecto"><option value="">-- Todos --</option></select>
-                <button id="btnFiltrar" class="btn-primary">Filtrar</button>
-                <button id="btnMostrarTodo" class="btn-secondary">Mostrar Todo</button>
-                <button id="btnPrint" class="btn-primary">🖨️ Imprimir Reporte</button>
-            </div>
-        </div>
-        <div class="card">
-            <h2 class="no-print">Historial de Viajes</h2>
-            <div style="overflow-x:auto;">
-                <table id="registrosTabla">
-                    <thead><tr><th>Item</th><th>Fecha</th><th>Nombres</th><th>Placa</th><th>Material</th><th>Cantera</th><th>Proyecto</th><th>Volumen</th><th># Viajes</th><th>Vol. Total</th><th class="action-cell">Acciones</th></tr></thead>
-                    <tbody id="registrosBody"></tbody>
-                    <tfoot id="registrosTfoot"></tfoot>
-                </table>
-            </div>
-        </div>
-    </div>
-
-    <div id="signature-section">
-        <div class="signature-box">
-            <p class="signature-line">_________________________</p>
-            <p>Ing. Jose L. Macas P.</p>
-            <p>Residente de Obra</p>
-        </div>
-    </div>
 </div>
 
 <script type="module">
@@ -153,7 +105,40 @@
     const db = getFirestore(app);
 
     document.addEventListener('DOMContentLoaded', () => {
-        // --- Referencias a elementos del DOM ---
+        const cargarContenidoHTML = () => {
+            document.getElementById('tab-registro').innerHTML = `<div class="card"><h2 id="formViajeTitulo">🚚 Nuevo Registro de Viaje</h2><form id="transporteForm"><input type="hidden" id="indiceEdicion"><select id="selectNombres" required><option value="">1. Seleccionar Chofer</option></select><select id="selectPlaca" required disabled><option value="">2. Seleccionar Placa</option></select><select id="selectMaterial" required><option value="">3. Seleccionar Material</option></select><input type="number" id="volumen" placeholder="Volumen (se autocompleta)" step="0.01" readonly required><input type="date" id="fecha" required><select id="selectCantera" required><option value="">Seleccionar Cantera</option></select><select id="selectProyecto" required><option value="">Seleccionar Proyecto</option></select><input type="number" id="numViajes" placeholder="# de Viajes" value="1" min="1" required><div class="form-buttons"><button type="submit" id="btnSubmitViaje" class="btn-primary" style="flex-grow: 1;">Agregar Registro</button><button type="button" id="btnCancelarEdicion" class="btn-secondary" style="flex-grow: 1;">Cancelar</button></div></form></div>`;
+            document.getElementById('tab-admin').innerHTML = `<div class="grid-container-5"><div class="card"><h2>👤 Nombres de Choferes</h2><form id="nombreChoferForm"><input type="hidden" class="edit-id"><input type="text" id="nuevoNombreChofer" placeholder="Nombre y Apellido" required><button type="submit" class="btn-primary">Agregar</button></form><ul id="nombresChoferesLista"></ul></div><div class="card"><h2>🚛 Asignar Vehículo</h2><form id="choferVehiculoForm"><input type="hidden" class="edit-id"><select id="selectNombreAdmin" required><option value="">Seleccionar Chofer</option></select><input type="text" id="nuevaPlaca" placeholder="Placa" required><input type="number" id="nuevoVolumen" placeholder="Volumen (m³)" step="0.01" required><button type="submit" class="btn-primary">Asignar</button></form><ul id="choferesVehiculosLista"></ul></div><div class="card"><h2>💎 Materiales</h2><form id="materialForm"><input type="hidden" class="edit-id"><input type="text" id="nuevoMaterial" placeholder="Nombre" required><button type="submit" class="btn-primary">Agregar</button></form><ul id="materialesLista"></ul></div><div class="card"><h2>📍 Canteras</h2><form id="canteraForm"><input type="hidden" class="edit-id"><input type="text" id="nuevaCantera" placeholder="Nombre" required><button type="submit" class="btn-primary">Agregar</button></form><ul id="canterasLista"></ul></div><div class="card"><h2>🏁 Proyectos</h2><form id="proyectoForm"><input type="hidden" class="edit-id"><input type="text" id="nuevoProyecto" placeholder="Nombre" required><button type="submit" class="btn-primary">Agregar</button></form><ul id="proyectosLista"></ul></div></div>`;
+            document.getElementById('tab-summary').innerHTML = `
+                <div class="print-only">TRANSPORTE DE MATERIALES PETREOS</div>
+                <div class="card">
+                    <h2>🔎 Filtrar e Imprimir</h2>
+                    <div class="filter-form">
+                        <label for="fechaInicio">Desde:</label><input type="date" id="fechaInicio">
+                        <label for="fechaFin">Hasta:</label><input type="date" id="fechaFin">
+                        <label for="filtroMaterial">Material:</label>
+                        <select id="filtroMaterial"><option value="">-- Todos --</option></select>
+                        <label for="filtroProyecto">Proyecto:</label>
+                        <select id="filtroProyecto"><option value="">-- Todos --</option></select>
+                        <button id="btnFiltrar" class="btn-primary">Filtrar</button>
+                        <button id="btnMostrarTodo" class="btn-secondary">Mostrar Todo</button>
+                        <button id="btnPrint" class="btn-primary">🖨️ Imprimir Reporte</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <h2 class="no-print">Historial de Viajes</h2>
+                    <div style="overflow-x:auto;">
+                        <table id="registrosTabla">
+                            <thead><tr><th>Item</th><th>Fecha</th><th>Nombres</th><th>Placa</th><th>Material</th><th>Cantera</th><th>Proyecto</th><th>Volumen</th><th># Viajes</th><th>Vol. Total</th><th class="action-cell">Acciones</th></tr></thead>
+                            <tbody id="registrosBody"></tbody>
+                            <tfoot id="registrosTfoot"></tfoot>
+                        </table>
+                    </div>
+                </div>`;
+            document.getElementById('signature-section').innerHTML = `<div class="signature-box"><p class="signature-line">_________________________</p><p>Ing. Jose L. Macas P.</p><p>Residente de Obra</p></div>`;
+        };
+
+        cargarContenidoHTML();
+
         const btnPrint = document.getElementById('btnPrint');
         const tabs = document.querySelectorAll('.tab-button');
         const tabContents = document.querySelectorAll('.tab-content');
@@ -174,7 +159,6 @@
         const filtroMaterial = document.getElementById('filtroMaterial');
         const filtroProyecto = document.getElementById('filtroProyecto');
         
-        // --- Lógica de Pestañas ---
         tabs.forEach(tab => {
             tab.addEventListener('click', () => {
                 tabs.forEach(t => t.classList.remove('active'));
@@ -186,7 +170,6 @@
 
         btnPrint.addEventListener('click', () => { window.print(); });
 
-        // --- LÓGICA GENÉRICA PARA LISTAS SIMPLES (CON EDICIÓN) ---
         const administrarListaSimple = async (collectionName, formId, inputId, listaId, selectIds, nombreSingular) => {
             const form = document.getElementById(formId);
             const inputEl = document.getElementById(inputId);
@@ -340,14 +323,26 @@
         const renderizarRegistros = (registros) => {
             registros.sort((a, b) => b.fecha.localeCompare(a.fecha));
             registrosBody.innerHTML = '';
+            registrosTfoot.innerHTML = '';
+
+            let totalViajes = 0;
+            let totalVolumen = 0;
+
             registros.forEach((registro, index) => {
                 const fila = document.createElement('tr');
                 const volumen = parseFloat(registro.volumen) || 0;
                 const numViajes = parseInt(registro.numViajes) || 0;
-                const volumenTotal = (volumen * numViajes).toFixed(2);
-                fila.innerHTML = `<td>${index + 1}</td><td>${registro.fecha}</td><td>${registro.nombres}</td><td>${registro.placa}</td><td>${registro.material || ''}</td><td>${registro.cantera || ''}</td><td>${registro.proyecto || ''}</td><td>${registro.volumen}</td><td>${registro.numViajes}</td><td><b>${volumenTotal}</b></td><td class="action-cell"><button class="action-btn edit-btn" data-id="${registro.id}">Modificar</button><button class="action-btn delete-btn" data-id="${registro.id}">Borrar</button></td>`;
+                const volumenTotal = (volumen * numViajes);
+                totalViajes += numViajes;
+                totalVolumen += volumenTotal;
+                fila.innerHTML = `<td>${index + 1}</td><td>${registro.fecha}</td><td>${registro.nombres}</td><td>${registro.placa}</td><td>${registro.material || ''}</td><td>${registro.cantera || ''}</td><td>${registro.proyecto || ''}</td><td>${volumen.toFixed(2)}</td><td>${numViajes}</td><td><b>${volumenTotal.toFixed(2)}</b></td><td class="action-cell"><button class="action-btn edit-btn" data-id="${registro.id}">Modificar</button><button class="action-btn delete-btn" data-id="${registro.id}">Borrar</button></td>`;
                 registrosBody.appendChild(fila);
             });
+            if (registros.length > 0) {
+                const pieDeTabla = document.createElement('tr');
+                pieDeTabla.innerHTML = `<td colspan="8" style="text-align: right;"><strong>TOTALES:</strong></td><td><strong>${totalViajes}</strong></td><td><strong>${totalVolumen.toFixed(2)}</strong></td><td class="action-cell"></td>`;
+                registrosTfoot.appendChild(pieDeTabla);
+            }
         };
         
         btnFiltrar.addEventListener('click', () => {
