--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transporte de Materiales v37.0</title>
+    <title>Transporte de Materiales v38.0</title>
     <style>
         body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; margin: 0; background-color: #f7f9fc; color: #333; }
         .main-container { max-width: 1200px; margin: 20px auto; padding: 20px; }
@@ -43,6 +43,7 @@
         .print-only { display: none; }
         #signature-section { display: none; }
         
+        /* --- ESTILOS DE IMPRESIÓN PROFESIONAL (ACTUALIZADOS) --- */
         @media print {
             body { background-color: white; font-size: 9pt; font-family: Arial, Helvetica, sans-serif; }
             @page {
@@ -51,7 +52,16 @@
             }
             .main-container { margin: 0; padding: 0; }
             .card { box-shadow: none; border: none; padding: 0; margin-bottom: 20px; page-break-inside: avoid; }
-            .print-only { display: block; text-align: center; font-size: 18pt; font-weight: bold; color: #003366; padding-bottom: 10px; margin-bottom: 25px; border-bottom: 2px solid #aed6f1; }
+            .print-only {
+                display: block;
+                text-align: center;
+                font-size: 18pt;
+                font-weight: bold;
+                color: #003366;
+                padding-bottom: 10px;
+                margin-bottom: 15px; /* Espacio reducido */
+                border-bottom: 2px solid #aed6f1;
+            }
             .no-print { display: none; }
             .header-container, .tabs, .tab-content:not(.active), form, .list-action-btn, .card:has(.filter-form), .action-cell { display: none; }
             .tab-content.active { display: block !important; }
@@ -60,7 +70,12 @@
             th { background-color: #EAEAEA !important; font-weight: bold; text-align: center; -webkit-print-color-adjust: exact; print-color-adjust: exact; }
             tfoot td { background-color: #E0E0E0 !important; -webkit-print-color-adjust: exact; print-color-adjust: exact; text-align: center; }
             tfoot td:first-child { text-align: right; }
-            #signature-section { display: flex; justify-content: center; margin-top: 80px; page-break-before: always; }
+            /* Estilo de firma con espacio reducido y sin salto de página forzado */
+            #signature-section {
+                display: flex;
+                justify-content: center;
+                margin-top: 60px; /* Espacio reducido */
+            }
             .signature-box { text-align: center; width: 300px; }
             .signature-box p { margin: 2px 0; }
             .signature-line { margin-bottom: 8px; font-weight: bold; }
@@ -104,39 +119,39 @@
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
-    document.addEventListener('DOMContentLoaded', () => {
-        const cargarContenidoHTML = () => {
-            document.getElementById('tab-registro').innerHTML = `<div class="card"><h2 id="formViajeTitulo">🚚 Nuevo Registro de Viaje</h2><form id="transporteForm"><input type="hidden" id="indiceEdicion"><select id="selectNombres" required><option value="">1. Seleccionar Chofer</option></select><select id="selectPlaca" required disabled><option value="">2. Seleccionar Placa</option></select><select id="selectMaterial" required><option value="">3. Seleccionar Material</option></select><input type="number" id="volumen" placeholder="Volumen (se autocompleta)" step="0.01" readonly required><input type="date" id="fecha" required><select id="selectCantera" required><option value="">Seleccionar Cantera</option></select><select id="selectProyecto" required><option value="">Seleccionar Proyecto</option></select><input type="number" id="numViajes" placeholder="# de Viajes" value="1" min="1" required><div class="form-buttons"><button type="submit" id="btnSubmitViaje" class="btn-primary" style="flex-grow: 1;">Agregar Registro</button><button type="button" id="btnCancelarEdicion" class="btn-secondary" style="flex-grow: 1;">Cancelar</button></div></form></div>`;
-            document.getElementById('tab-admin').innerHTML = `<div class="grid-container-5"><div class="card"><h2>👤 Nombres de Choferes</h2><form id="nombreChoferForm"><input type="hidden" class="edit-id"><input type="text" id="nuevoNombreChofer" placeholder="Nombre y Apellido" required><button type="submit" class="btn-primary">Agregar</button></form><ul id="nombresChoferesLista"></ul></div><div class="card"><h2>🚛 Asignar Vehículo</h2><form id="choferVehiculoForm"><input type="hidden" class="edit-id"><select id="selectNombreAdmin" required><option value="">Seleccionar Chofer</option></select><input type="text" id="nuevaPlaca" placeholder="Placa" required><input type="number" id="nuevoVolumen" placeholder="Volumen (m³)" step="0.01" required><button type="submit" class="btn-primary">Asignar</button></form><ul id="choferesVehiculosLista"></ul></div><div class="card"><h2>💎 Materiales</h2><form id="materialForm"><input type="hidden" class="edit-id"><input type="text" id="nuevoMaterial" placeholder="Nombre" required><button type="submit" class="btn-primary">Agregar</button></form><ul id="materialesLista"></ul></div><div class="card"><h2>📍 Canteras</h2><form id="canteraForm"><input type="hidden" class="edit-id"><input type="text" id="nuevaCantera" placeholder="Nombre" required><button type="submit" class="btn-primary">Agregar</button></form><ul id="canterasLista"></ul></div><div class="card"><h2>🏁 Proyectos</h2><form id="proyectoForm"><input type="hidden" class="edit-id"><input type="text" id="nuevoProyecto" placeholder="Nombre" required><button type="submit" class="btn-primary">Agregar</button></form><ul id="proyectosLista"></ul></div></div>`;
-            document.getElementById('tab-summary').innerHTML = `
-                <div class="print-only">TRANSPORTE DE MATERIALES PETREOS</div>
-                <div class="card">
-                    <h2>🔎 Filtrar e Imprimir</h2>
-                    <div class="filter-form">
-                        <label for="fechaInicio">Desde:</label><input type="date" id="fechaInicio">
-                        <label for="fechaFin">Hasta:</label><input type="date" id="fechaFin">
-                        <label for="filtroMaterial">Material:</label>
-                        <select id="filtroMaterial"><option value="">-- Todos --</option></select>
-                        <label for="filtroProyecto">Proyecto:</label>
-                        <select id="filtroProyecto"><option value="">-- Todos --</option></select>
-                        <button id="btnFiltrar" class="btn-primary">Filtrar</button>
-                        <button id="btnMostrarTodo" class="btn-secondary">Mostrar Todo</button>
-                        <button id="btnPrint" class="btn-primary">🖨️ Imprimir Reporte</button>
-                    </div>
+    const cargarContenidoHTML = () => {
+        document.getElementById('tab-registro').innerHTML = `<div class="card"><h2 id="formViajeTitulo">🚚 Nuevo Registro de Viaje</h2><form id="transporteForm"><input type="hidden" id="indiceEdicion"><select id="selectNombres" required><option value="">1. Seleccionar Chofer</option></select><select id="selectPlaca" required disabled><option value="">2. Seleccionar Placa</option></select><select id="selectMaterial" required><option value="">3. Seleccionar Material</option></select><input type="number" id="volumen" placeholder="Volumen (se autocompleta)" step="0.01" readonly required><input type="date" id="fecha" required><select id="selectCantera" required><option value="">Seleccionar Cantera</option></select><select id="selectProyecto" required><option value="">Seleccionar Proyecto</option></select><input type="number" id="numViajes" placeholder="# de Viajes" value="1" min="1" required><div class="form-buttons"><button type="submit" id="btnSubmitViaje" class="btn-primary" style="flex-grow: 1;">Agregar Registro</button><button type="button" id="btnCancelarEdicion" class="btn-secondary" style="flex-grow: 1;">Cancelar</button></div></form></div>`;
+        document.getElementById('tab-admin').innerHTML = `<div class="grid-container-5"><div class="card"><h2>👤 Nombres de Choferes</h2><form id="nombreChoferForm"><input type="hidden" class="edit-id"><input type="text" id="nuevoNombreChofer" placeholder="Nombre y Apellido" required><button type="submit" class="btn-primary">Agregar</button></form><ul id="nombresChoferesLista"></ul></div><div class="card"><h2>🚛 Asignar Vehículo</h2><form id="choferVehiculoForm"><input type="hidden" class="edit-id"><select id="selectNombreAdmin" required><option value="">Seleccionar Chofer</option></select><input type="text" id="nuevaPlaca" placeholder="Placa" required><input type="number" id="nuevoVolumen" placeholder="Volumen (m³)" step="0.01" required><button type="submit" class="btn-primary">Asignar</button></form><ul id="choferesVehiculosLista"></ul></div><div class="card"><h2>💎 Materiales</h2><form id="materialForm"><input type="hidden" class="edit-id"><input type="text" id="nuevoMaterial" placeholder="Nombre" required><button type="submit" class="btn-primary">Agregar</button></form><ul id="materialesLista"></ul></div><div class="card"><h2>📍 Canteras</h2><form id="canteraForm"><input type="hidden" class="edit-id"><input type="text" id="nuevaCantera" placeholder="Nombre" required><button type="submit" class="btn-primary">Agregar</button></form><ul id="canterasLista"></ul></div><div class="card"><h2>🏁 Proyectos</h2><form id="proyectoForm"><input type="hidden" class="edit-id"><input type="text" id="nuevoProyecto" placeholder="Nombre" required><button type="submit" class="btn-primary">Agregar</button></form><ul id="proyectosLista"></ul></div></div>`;
+        document.getElementById('tab-summary').innerHTML = `
+            <div class="card">
+                <h2>🔎 Filtrar e Imprimir</h2>
+                <div class="filter-form">
+                    <label for="fechaInicio">Desde:</label><input type="date" id="fechaInicio">
+                    <label for="fechaFin">Hasta:</label><input type="date" id="fechaFin">
+                    <label for="filtroMaterial">Material:</label>
+                    <select id="filtroMaterial"><option value="">-- Todos --</option></select>
+                    <label for="filtroProyecto">Proyecto:</label>
+                    <select id="filtroProyecto"><option value="">-- Todos --</option></select>
+                    <button id="btnFiltrar" class="btn-primary">Filtrar</button>
+                    <button id="btnMostrarTodo" class="btn-secondary">Mostrar Todo</button>
+                    <button id="btnPrint" class="btn-primary">🖨️ Imprimir Reporte</button>
                 </div>
-                <div class="card">
-                    <h2 class="no-print">Historial de Viajes</h2>
-                    <div style="overflow-x:auto;">
-                        <table id="registrosTabla">
-                            <thead><tr><th>Item</th><th>Fecha</th><th>Nombres</th><th>Placa</th><th>Material</th><th>Cantera</th><th>Proyecto</th><th>Volumen</th><th># Viajes</th><th>Vol. Total</th><th class="action-cell">Acciones</th></tr></thead>
-                            <tbody id="registrosBody"></tbody>
-                            <tfoot id="registrosTfoot"></tfoot>
-                        </table>
-                    </div>
-                </div>`;
-            document.getElementById('signature-section').innerHTML = `<div class="signature-box"><p class="signature-line">_________________________</p><p>Ing. Jose L. Macas P.</p><p>Residente de Obra</p></div>`;
-        };
+            </div>
+            <div class="card">
+                <div class="print-only">TRANSPORTE DE MATERIALES PETREOS</div>
+                <h2 class="no-print">Historial de Viajes</h2>
+                <div style="overflow-x:auto;">
+                    <table id="registrosTabla">
+                        <thead><tr><th>Item</th><th>Fecha</th><th>Nombres</th><th>Placa</th><th>Material</th><th>Cantera</th><th>Proyecto</th><th>Volumen</th><th># Viajes</th><th>Vol. Total</th><th class="action-cell">Acciones</th></tr></thead>
+                        <tbody id="registrosBody"></tbody>
+                        <tfoot id="registrosTfoot"></tfoot>
+                    </table>
+                </div>
+            </div>`;
+        document.getElementById('signature-section').innerHTML = `<div class="signature-box"><p class="signature-line">_________________________</p><p>Ing. Jose L. Macas P.</p><p>Residente de Obra</p></div>`;
+    };
 
+    document.addEventListener('DOMContentLoaded', () => {
         cargarContenidoHTML();
 
         const btnPrint = document.getElementById('btnPrint');
